# FUSOU

./: .fossa.yml  .gitattributes  .gitignore  .npmrc  AVRO_FIX_COMPREHENSIVE_REPORT.md  AVRO_SCHEMA_COMPATIBILITY_AUDIT.md  COMPREHENSIVE_AVRO_DATAFLOW_AUDIT.md  FUSOU.code-workspace  LICENSE  OPERATIONAL_FLOW_ANALYSIS.md  PACKAGE_ARCHITECTURE_FINDINGS.md  README.md  about.hbs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  verify-schema-version.sh
FUSOU-APP/kc_api/: .env  Cargo.toml
FUSOU-APP/kc_api/src/database/: battle.rs  cell.rs  env_info.rs  ship.rs  slotitem.rs  table.rs
FUSOU-APP/kc_api/src/interface/: battle_combined.rs  logs.rs  material.rs  mst_equip_ship.rs  mst_ship.rs  mst_slot_item_equip_type.rs  slot_item.rs
FUSOU-APP/kc_api/src/kcapi_common/: common_air.rs  common_midnight.rs  common_result.rs
FUSOU-APP/kc_api/tests/: check_database_dependency.rs  check_struct_dependency.rs
FUSOU-APP/kc_api/tests/database_dependency_dot/: all.dot
FUSOU-APP/kc_api/tests/database_dependency_json/: all.json
FUSOU-APP/kc_api/tests/struct_dependency_dot/: all.dot  api_dmm_payment@paycheck.dot  api_get_member@basic.dot  api_get_member@deck.dot  api_get_member@furniture.dot  api_get_member@kdock.dot  api_get_member@mapinfo.dot  api_get_member@material.dot  api_get_member@mission.dot  api_get_member@ndock.dot  api_get_member@payitem.dot  api_get_member@picture_book.dot  api_get_member@practice.dot  api_get_member@preset_deck.dot  api_get_member@preset_slot.dot  api_get_member@questlist.dot  api_get_member@record.dot  api_get_member@require_info.dot  api_get_member@ship2.dot  api_get_member@ship3.dot  api_get_member@ship_deck.dot  api_get_member@slot_item.dot  api_get_member@sortie_conditions.dot  api_get_member@unsetslot.dot  api_get_member@useitem.dot  api_port@airCorpsCondRecoveryWithTimer.dot  api_port@air_corps_cond_recovery_with_timer.dot  api_port@port.dot  api_req_air_corps@cond_recovery.dot  api_req_air_corps@expand_base.dot  api_req_air_corps@set_action.dot  api_req_air_corps@set_plane.dot  api_req_air_corps@supply.dot  api_req_battle_midnight@battle.dot  api_req_battle_midnight@sp_midnight.dot  api_req_combined_battle@battle.dot  api_req_combined_battle@battle_water.dot  api_req_combined_battle@battleresult.dot  api_req_combined_battle@each_battle.dot  api_req_combined_battle@each_battle_water.dot  (+73 more)
FUSOU-APP/kc_api/tests/struct_dependency_json/: all.json
FUSOU-APP/register_macro_derive_and_attr/: Cargo.toml
FUSOU-APP/register_macro_derive_and_attr/src/: add_field.rs  doc_util.rs  expand_struct_selector.rs  generate_convert.rs  generate_emitdata.rs  generate_encode.rs  generate_getter.rs  generate_test_root.rs  generate_test_struct.rs  lib.rs  parse_type_path.rs  register_struct.rs
FUSOU-APP/src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
FUSOU-APP/src-tauri/capabilities/: migrated.json
FUSOU-APP/src-tauri/resources/cmd/: add_store.bat  add_store.sh
FUSOU-APP/src-tauri/resources/pac/: proxy_local.pac
FUSOU-APP/src-tauri/src/: auth_server.rs  bidirectional_channel.rs  cmd.rs  cmd_pac_tauri.rs  discord.rs  external.rs  google_drive.rs  json_parser.rs  lib.rs  main.rs  notification.rs  supabase.rs  tauri_cmd.rs  test.rs  util.rs  wrap_proxy.rs
FUSOU-APP/src-tauri/src/database/: airbase.rs  battle.rs  cell.rs  deck.rs  encode.rs  mod.rs  ship.rs  slotitem.rs  table.rs
FUSOU-APP/src-tauri/src/interface/: air_base.rs  battle.rs  battle_combined.rs  cells.rs  deck_port.rs  interface.rs  logs.rs  material.rs  mission.rs  mod.rs  mst_equip_exslot_ship.rs  mst_equip_ship.rs  mst_maparea.rs  mst_mapinfo.rs  mst_ship.rs  mst_ship_graph.rs  mst_ship_upgrade.rs  mst_slot_item.rs  mst_slot_item_equip_type.rs  mst_stype.rs  mst_use_item.rs  n_dock.rs  ship.rs  slot_item.rs
FUSOU-APP/src-tauri/src/js/: svg_pan_zoom.html
FUSOU-APP/src-tauri/src/kcapi/: mod.rs
FUSOU-APP/src-tauri/src/kcapi_common/: common_1.rs  common_2.rs  common_air.rs  common_battle.rs  common_map.rs  common_midnight.rs  common_result.rs  custom_type.rs  mod.rs
FUSOU-APP/src-tauri/tests/: check_database_dependency.rs  check_struct_defined.rs  check_struct_dependency.rs  export_svg.bat  export_svg.sh  struct_dependency.dot  struct_names  test.rs
FUSOU-APP/src-tauri/tests/struct_dependency_dot/: all.dot  api_dmm_payment@paycheck.dot  api_get_member@basic.dot  api_get_member@deck.dot  api_get_member@furniture.dot  api_get_member@kdock.dot  api_get_member@mapinfo.dot  api_get_member@material.dot  api_get_member@mission.dot  api_get_member@ndock.dot  api_get_member@payitem.dot  api_get_member@picture_book.dot  api_get_member@practice.dot  api_get_member@preset_deck.dot  api_get_member@preset_slot.dot  api_get_member@questlist.dot  api_get_member@record.dot  api_get_member@require_info.dot  api_get_member@ship2.dot  api_get_member@ship3.dot  api_get_member@ship_deck.dot  api_get_member@slot_item.dot  api_get_member@sortie_conditions.dot  api_get_member@unsetslot.dot  api_get_member@useitem.dot  api_port@port.dot  api_req_air_corps@set_action.dot  api_req_air_corps@set_plane.dot  api_req_air_corps@supply.dot  api_req_battle_midnight@battle.dot  api_req_battle_midnight@sp_midnight.dot  api_req_combined_battle@battle.dot  api_req_combined_battle@battle_water.dot  api_req_combined_battle@battleresult.dot  api_req_combined_battle@each_battle.dot  api_req_combined_battle@each_battle_water.dot  api_req_combined_battle@ec_battle.dot  api_req_combined_battle@ec_midnight_battle.dot  api_req_combined_battle@goback_port.dot  api_req_combined_battle@ld_airbattle.dot  (+70 more)
FUSOU-PROXY/proxy_rust/proxy/: Cargo.toml  proxy.pac
FUSOU-PROXY/proxy_rust/proxy-https/: Cargo.toml  proxy.pac  proxy_local.pac
FUSOU-PROXY/proxy_rust/proxy-https/cmd/: add_proxy.sh  add_store.sh
FUSOU-PROXY/proxy_rust/proxy-https/examples/: example.rs
FUSOU-PROXY/proxy_rust/proxy-https/src/: bidirectional_channel.rs  edit_pac.rs  lib.rs  pac_server.rs  proxy_server_https.rs
FUSOU-PROXY/proxy_rust/proxy/example/: example.rs
FUSOU-PROXY/proxy_rust/proxy/src/: backup.rs  bidirectional_channel.rs  (+7 more)
(+763 files in other folders)
