[package]
name = "kc_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.14.0"
register_trait = { path = "../register_trait" }
chrono = "0.4.31"
once_cell = "1.21.3"
apache-avro = { version = "0.17.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

[dev-dependencies]
confy = "0.6.1"
regex = "1.9.6"
dot-writer = "0.1.3"

[features]
default = [ "graphviz" ]
graphviz = []
cytoscape = []
