[package]
name = "register_macro_derive_and_attr"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
syn = "2.0.67"
confy = "0.6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
darling = "0.20.10"
proc-macro2 = "1.0.86"
sqids = "0.4.1"
regex = "1.10.6"

[lib]
proc-macro = true
