[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "notification-all", "system-tray", "process-command-api"] }
confy = "0.6.1"
regex = "1.9.6"
tokio = { version = "1.38.0", features = ["full"] }
webbrowser = "1.0.1"
arboard = "3.4.0"
wg = { version = "0.9.1", features = ["future"] }
register_macro_derive_and_attr = { path = "./../register_macro_derive_and_attr" }
register_trait = { path = "./../register_trait" }
proxy-https = { path = "./../../FUSOU-PROXY/proxy_rust/proxy-https" }
chrono = "0.4.31"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
discord-rich-presence = "0.2.4"
dotenvy = "0.15.7"
tauri-invoke-http = "0.1"
dotenvy_macro = "0.15.7"
directories = "6.0.0"

[dev-dependencies]
dot-writer = "0.1.3"
petgraph = "0.6.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(TAURI_BUILD_DEBUG)'] }
